# returns_calculator

./: .env  .gitignore  README.md  pyproject.toml
data/: currency_data.txt
src/: main.py
tests/: conftest.py
tests/functional/: test_main.py
tests/unit/: test_main.py
